[tool.poetry]
name = "distortme"
version = "0.1.0"
description = "CLI utility for augmentation and preprocessing images."
authors = ["Valentin Evseenko <roninfromsvf@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
distortme = "distortme.main:app"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^0.1"
colorama = "^0.4.3"
typer = "^0.2.1"
nptyping = "^1.1.0"
albumentations = "^0.4.5"
torch = "^1.5.0"
torchvision = "^0.6.0"
aiohttp = "^3.6.2"
tqdm = "^4.46.1"
frozendict = "^1.2"
pandas = "^1.0.4"
termplotlib = "^0.3.1"
opencv-python = "^4.1.1.26"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
